Always reset audio start level not working
The fix provided in #19664 (closed) (aba1b014) does not work for me.
When I enable "volume reset" for mmdevice, VLC appears twice in Windows volume mixer (see screenshot) and volume slider has no effect on audio level (it controls "LibVLC 3.0.2", which produces no sound).
When "Always reset audio start level" is not enabled, only "LibVLC 3.0.2" appears in Windows volume mixer and volume slider works as expected.
VLC: 3.0.2-20180414-0547-win64\ OS: Windows 10 1703 x64