mmdevice: make --no-volume-save actually work

(fixes #20291)